[tool.poetry]
name = "parameter-store-extension"
version = "0.1.0"
description = ""
authors = ["Joe Snell <joepsnell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lef = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
